# automatic-deployer

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: configs.json
deployer/: __init__.py  __main__.py  cli.py  consts.py
deployer/manipulators/: __init__.py  command_manipulator.py  git_manipulator.py
