[project]
name = "automatic-deployer"
description = "A CLI App to watch git repo and automatically run a command (deploy command, ex. build and run docker container) after inspecting some changes."
authors = [
    { name = "Reza Mohammadi", email = "rmm.dev.backend@gmail.com" },
]
dependencies = [
    "typer[all]>=0.6.1",
    "GitPython>=3.1.27",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]

[tool.pdm.build]
includes = [
    "deployer/",
    "data/",
    "log/",
    "src/",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
version = { source = "file", path = "deployer/__init__.py" }

[project.scripts]
deployer = "deployer.cli:app"