[project]
name = "automatic-deployer"
description = "A CLI App to watch git repo and automatically run a command (deploy command, ex. build and run docker container) after inspecting some changes."
authors = [
    { name = "Reza Mohammadi", email = "rmm.dev.backend@gmail.com" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "typer[all]>=0.6.1",
    "GitPython>=3.1.27",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]

[tool.pdm.build]
includes = [
    "deployer/",
    "data/",
    "log/",
    "src/",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
version = { source = "file", path = "deployer/__init__.py" }

[project.scripts]
deployer = "deployer.cli:app"

[project.urls]
homepage = "https://github.com/rmmbdev/automatic-deployer"
repository = "https://github.com/rmmbdev/automatic-deployer"